--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./assets/logo.png">
     <title>Emergency Service Directory (Assignment-B12A05)</title>
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -11,11 +12,28 @@
     <!-- Tailwind css CDN -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body>
-    
-<h1 class="font-bold text-pink-700">Emergency Service Directory</h1>
+<body >
 
-
+<!-- Navbar Start Here -->
+<nav class="flex justify-between items-center py-[24px]">
+    <div class="nav-left-side flex items-center gap-2">
+        <img src="./assets/logo.png" alt="Site Logo" class="w-[50px]">
+        <h3 class="text-[#006747] font-black">Emergency <br> Service</h3>
+    </div>
+    <div class="nav-right-side flex items-center gap-[40px]">
+        <div class="heart-icon flex items-center gap-3 bg-[#41ff6b1a] py-2 px-3 rounded-full">
+            <span>0</span>
+            <img src="./assets/heart.png" alt="heart icon" class="w-[30px] ">
+        </div>
+        <div class="coin-count flex items-center gap-3 bg-[#41ff6b1a] py-2 px-3 rounded-full">
+            <span>100</span>
+            <img src="./assets/coin.png" alt="coin count" class="w-[24px]">
+        </div>
+        <div class="copy-count flex items-center gap-3 bg-[#00A63E] py-2 px-3 rounded-full">
+            <p><span>0</span> Copy</p>
+        </div>
+    </div>
+</nav>
 
 
 
