--- a/index.html
+++ b/index.html
@@ -45,12 +45,34 @@
             <img src="./assets/logo.png" alt="Logo" class="w-[92px] mx-auto">
             <h1 class="font-bold text-2xl ">Emergency Service Directory</h1>
             <p class="font-semibold leading-[2.5]">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
-
         </div>
     </section>
+    <section class="grid grid-cols-12 gap-10 py-10 px-4">
+        <div class="cards-section grid grid-cols-9 border-2 border-red-700 ">
+            <div class="card w-[300px] bg-white p-5 rounded-2xl border-2 border-green-700">
+                <div class="flex justify-between items-center mb-2">
+                    <div class="p-2 rounded-lg bg-[#FFE3E2]"><img src="./assets/emergency.png" alt="Emergency" class="w-[24px]"></div>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+                <h3 class="font-bold text-[#111111] text-lg hind-madurai-font">National Emergency Number</h3>
+                <p class="roboto-font text-lg mb-2">National Emergency</p>
+                <h2 class="roboto-font text-[#111111] font-bold text-3xl">999</h2>
+                <p class="text-[#5C5C5C] hind-madurai-font text-lg bg-[#F2F2F2] rounded-lg ">All</p>
+                <div>
+                    <div class="copy"></div>
+                    <div class="call"></div>
+                </div>
+            </div>
+        </div>
+        <!-- <div class="call-history-section grid grid-cols-3 border-2 border-green-700">
+
+        </div> -->
+    </section>
+
+
  </main>
 
-
+<!--  -->
 
 
 
