added bubble button from DaisyUI

--- a/index.html
+++ b/index.html
@@ -57,13 +57,50 @@
                 <h3 class="font-bold text-[#111111] text-lg hind-madurai-font">National Emergency Number</h3>
                 <p class="roboto-font text-lg mb-2">National Emergency</p>
                 <h2 class="roboto-font text-[#111111] font-bold text-3xl">999</h2>
-                <p class="text-[#5C5C5C] hind-madurai-font text-lg bg-[#F2F2F2] rounded-lg ">All</p>
-                <div>
-                    <div class="copy"></div>
-                    <div class="call"></div>
+                <div><p class="inline px-3 py-1  text-[#5C5C5C] bg-[#F2F2F2] hind-madurai-font text-lg rounded-lg ">All</p></div>
+                <!-- <div class="flex gap-2 justify-between items-center mt-[18px]">
+                    <button class="copy border-2 border-[#D4D6D5] w-[50%] rounded-lg text-center text-[#5C5C5C] text-sm roboto-font  py-1"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
+                    
+                    <button class="call border-2 border-[#00A63E] bg-[#00A63E]  w-[50%] rounded-lg text-center text-sm roboto-font text-white py-1"><span><i class="fa-solid fa-phone"></i></span> Call</button>
+                </div> -->
+                <div class="grid grid-cols-2 gap-2  card-actions justify-between items-center mt-[18px]">
+                    <button class="btn border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
+                    <button class="btn btn-ghost border-2 border-[#00A63E] bg-[#00A63E]  rounded-lg text-center text-sm roboto-font text-white"><span><i class="fa-solid fa-phone"></i></span> Call</button>
                 </div>
             </div>
         </div>
+<!-- 
+<div class="card bg-neutral text-neutral-content w-96">
+  <div class="card-body items-center text-center">
+    <h2 class="card-title">Cookies!</h2>
+    <p>We are using cookies for no reason.</p>
+    <div class="card-actions justify-end">
+      <button class="btn btn-primary">Accept</button>
+      <button class="btn btn-ghost">Deny</button>
+    </div>
+  </div>
+</div> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         <!-- <div class="call-history-section grid grid-cols-3 border-2 border-green-700">
 
         </div> -->
