--- a/index.html
+++ b/index.html
@@ -14,96 +14,223 @@
     <!-- Custom Css -->
      <link rel="stylesheet" href="./styles/style.css">
 </head>
-<body class="">
+<body class=" bg-[#f5fff6]">
 
 <!-- Navbar Start Here -->
-<nav class=" flex flex-col md:flex-row gap-3 justify-between items-center py-[24px] max-w-[1280px] mx-auto px-4"> 
-    <div class="nav-left-side flex items-center gap-2 ">
-        <img src="./assets/logo.png" alt="Site Logo" class="w-[50px]">
-        <h3 class="text-[#006747] font-black leading-[1] text-2xl">Emergency <br> Service</h3>
-    </div>
-    <div class="nav-right-side flex items-center justify-end gap-4 hind-madurai-font font-bold ">
-        <div class="heart-icon flex items-center gap-2 bg-[#41ff6b1a] py-2 px-4 rounded-full">
-            <span>0</span>
-            <img src="./assets/heart.png" alt="heart icon" class="w-[24px] ">
+<nav class="bg-white"> 
+    <div class=" flex flex-col md:flex-row gap-3 justify-between items-center py-[24px] max-w-[1280px] mx-auto px-4 ">
+        <div class="nav-left-side flex items-center gap-2 ">
+            <img src="./assets/logo.png" alt="Site Logo" class="w-[50px]">
+            <h3 class="text-[#006747] font-black leading-[1] text-2xl">Emergency <br> Service</h3>
         </div>
-        <div class="coin-count flex items-center gap-2 bg-[#41ff6b1a] py-2 px-4 rounded-full ">
-            <span>100</span>
-            <img src="./assets/coin.png" alt="coin count" class="w-[24px]">
-        </div>
-        <div class="copy-count flex items-center gap-2 bg-[#00A63E] py-2 px-4 rounded-full text-white">
-            <span>0</span>
-            <p>Copy</p>
+        <div class="nav-right-side flex items-center justify-end gap-4 hind-madurai-font font-bold ">
+            <div class="heart-icon flex items-center gap-2 bg-[#41ff6b1a] py-2 px-4 rounded-full">
+                <span>0</span>
+                <img src="./assets/heart.png" alt="heart icon" class="w-[24px] ">
+            </div>
+            <div class="coin-count flex items-center gap-2 bg-[#41ff6b1a] py-2 px-4 rounded-full ">
+                <span>100</span>
+                <img src="./assets/coin.png" alt="coin count" class="w-[24px]">
+            </div>
+            <div class="copy-count flex items-center gap-2 bg-[#00A63E] py-2 px-4 rounded-full text-white">
+                <span>0</span>
+                <p>Copy</p>
+            </div>
         </div>
     </div>
 </nav>
 
 <!-- Hero Section Start -->
  <main>
-    <section>
+    <section class="">
         <div class="mx-auto text-center text-white gradient-color py-5  px-4">
             <img src="./assets/logo.png" alt="Logo" class="w-[92px] mx-auto">
             <h1 class="font-bold text-2xl ">Emergency Service Directory</h1>
             <p class="font-semibold leading-[2.5]">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
         </div>
     </section>
-    <section class="grid grid-cols-12 gap-10 py-10 px-4">
-        <div class="cards-section grid grid-cols-9 border-2 border-red-700 ">
-            <div class="card w-[300px] bg-white p-5 rounded-2xl border-2 border-green-700">
+
+    <section class=" max-w-[1280px] mx-auto px-4 py-10 flex gap-10 flex-col md:flex-row justify-between rounded-xl ">
+        <!-- cards-section start Here -->
+        <div class="cards-section  md:w-9/12 w-full grid grid-cols-1 md:grid-cols-3 lg sm:grid-cols-2 gap-5 ">
+            <!-- card -->
+            <div class="card min-w-[200px] bg-white p-5 rounded-2xl box-shadow ">
                 <div class="flex justify-between items-center mb-2">
                     <div class="p-2 rounded-lg bg-[#FFE3E2]"><img src="./assets/emergency.png" alt="Emergency" class="w-[24px]"></div>
                     <i class="fa-regular fa-heart"></i>
                 </div>
                 <h3 class="font-bold text-[#111111] text-lg hind-madurai-font">National Emergency Number</h3>
                 <p class="roboto-font text-lg mb-2">National Emergency</p>
-                <h2 class="roboto-font text-[#111111] font-bold text-3xl">999</h2>
+                <h2 class="roboto-font text-[#111111] font-bold text-3xl mb-2">999</h2>
                 <div><p class="inline px-3 py-1  text-[#5C5C5C] bg-[#F2F2F2] hind-madurai-font text-lg rounded-lg ">All</p></div>
-                <!-- <div class="flex gap-2 justify-between items-center mt-[18px]">
-                    <button class="copy border-2 border-[#D4D6D5] w-[50%] rounded-lg text-center text-[#5C5C5C] text-sm roboto-font  py-1"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
-                    
-                    <button class="call border-2 border-[#00A63E] bg-[#00A63E]  w-[50%] rounded-lg text-center text-sm roboto-font text-white py-1"><span><i class="fa-solid fa-phone"></i></span> Call</button>
-                </div> -->
                 <div class="grid grid-cols-2 gap-2  card-actions justify-between items-center mt-[18px]">
-                    <button class="btn border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
-                    <button class="btn btn-ghost border-2 border-[#00A63E] bg-[#00A63E]  rounded-lg text-center text-sm roboto-font text-white"><span><i class="fa-solid fa-phone"></i></span> Call</button>
+                    <button class="btn btn-sm border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
+                    <button class="btn btn-sm btn-ghost border-2 border-[#00A63E] bg-[#00A63E]  rounded-lg text-center text-sm roboto-font text-white"><span><i class="fa-solid fa-phone"></i></span> Call</button>
+                </div>
+            </div>
+            <!-- card -->
+            <div class="card min-w-[200px] bg-white p-5 rounded-2xl box-shadow ">
+                <div class="flex justify-between items-center mb-2">
+                    <div class="p-2 rounded-lg bg-[#DFEFFF]"><img src="./assets/police.png" alt="police" class="w-[24px]"></div>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+                <h3 class="font-bold text-[#111111] text-lg hind-madurai-font">Police Helpline Number</h3>
+                <p class="roboto-font text-lg mb-2">Police</p>
+                <h2 class="roboto-font text-[#111111] font-bold text-3xl mb-2">999</h2>
+                <div><p class="inline px-3 py-1  text-[#5C5C5C] bg-[#F2F2F2] hind-madurai-font text-lg rounded-lg ">Police</p></div>
+                <div class="grid grid-cols-2 gap-2  card-actions justify-between items-center mt-[18px]">
+                    <button class="btn btn-sm border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
+                    <button class="btn btn-sm btn-ghost border-2 border-[#00A63E] bg-[#00A63E]  rounded-lg text-center text-sm roboto-font text-white"><span><i class="fa-solid fa-phone"></i></span> Call</button>
+                </div>
+            </div>
+            <!-- card -->
+            <div class="card min-w-[200px] bg-white p-5 rounded-2xl box-shadow ">
+                <div class="flex justify-between items-center mb-2">
+                    <div class="p-2 rounded-lg bg-[#FFE3E2]"><img src="./assets/fire-service.png" alt="fire-service" class="w-[24px]"></div>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+                <h3 class="font-bold text-[#111111] text-lg hind-madurai-font">Fire Service Number</h3>
+                <p class="roboto-font text-lg mb-2">Fire Service</p>
+                <h2 class="roboto-font text-[#111111] font-bold text-3xl mb-2">999</h2>
+                <div><p class="inline px-3 py-1  text-[#5C5C5C] bg-[#F2F2F2] hind-madurai-font text-lg rounded-lg ">Fire</p></div>
+                <div class="grid grid-cols-2 gap-2  card-actions justify-between items-center mt-[18px]">
+                    <button class="btn btn-sm border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
+                    <button class="btn btn-sm btn-ghost border-2 border-[#00A63E] bg-[#00A63E]  rounded-lg text-center text-sm roboto-font text-white"><span><i class="fa-solid fa-phone"></i></span> Call</button>
+                </div>
+            </div>
+            <!-- card -->
+            <div class="card min-w-[200px] bg-white p-5 rounded-2xl box-shadow ">
+                <div class="flex justify-between items-center mb-2">
+                    <div class="p-2 rounded-lg bg-[#FFE3E2]"><img src="./assets/ambulance.png" alt="Ambulance" class="w-[24px]"></div>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+                <h3 class="font-bold text-[#111111] text-lg hind-madurai-font">Ambulance Service</h3>
+                <p class="roboto-font text-lg mb-2">Ambulance</p>
+                <h2 class="roboto-font text-[#111111] font-bold text-3xl mb-2">1994-999999</h2>
+                <div><p class="inline px-3 py-1  text-[#5C5C5C] bg-[#F2F2F2] hind-madurai-font text-lg rounded-lg ">Health</p></div>
+                <div class="grid grid-cols-2 gap-2  card-actions justify-between items-center mt-[18px]">
+                    <button class="btn btn-sm border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
+                    <button class="btn btn-sm btn-ghost border-2 border-[#00A63E] bg-[#00A63E]  rounded-lg text-center text-sm roboto-font text-white"><span><i class="fa-solid fa-phone"></i></span> Call</button>
+                </div>
+            </div>
+            <!-- card -->
+            <div class="card min-w-[200px] bg-white p-5 rounded-2xl box-shadow ">
+                <div class="flex justify-between items-center mb-2">
+                    <div class="p-2 rounded-lg bg-[#FFE3E2]"><img src="./assets/emergency.png" alt="Emergency" class="w-[24px]"></div>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+                <h3 class="font-bold text-[#111111] text-lg hind-madurai-font">Women & Child Helpline</h3>
+                <p class="roboto-font text-lg mb-2">Women & Child Helpline</p>
+                <h2 class="roboto-font text-[#111111] font-bold text-3xl mb-2">109</h2>
+                <div><p class="inline px-3 py-1  text-[#5C5C5C] bg-[#F2F2F2] hind-madurai-font text-lg rounded-lg ">Help</p></div>
+                <div class="grid grid-cols-2 gap-2  card-actions justify-between items-center mt-[18px]">
+                    <button class="btn btn-sm border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
+                    <button class="btn btn-sm btn-ghost border-2 border-[#00A63E] bg-[#00A63E]  rounded-lg text-center text-sm roboto-font text-white"><span><i class="fa-solid fa-phone"></i></span> Call</button>
+                </div>
+            </div>
+            <!-- card -->
+            <div class="card min-w-[200px] bg-white p-5 rounded-2xl box-shadow ">
+                <div class="flex justify-between items-center mb-2">
+                    <div class="p-2 rounded-lg bg-[#FFE3E2]"><img src="./assets/emergency.png" alt="Emergency" class="w-[24px]"></div>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+                <h3 class="font-bold text-[#111111] text-lg hind-madurai-font">Anti-Corruption Helpline</h3>
+                <p class="roboto-font text-lg mb-2">Anti-Corruption</p>
+                <h2 class="roboto-font text-[#111111] font-bold text-3xl mb-2">106</h2>
+                <div><p class="inline px-3 py-1  text-[#5C5C5C] bg-[#F2F2F2] hind-madurai-font text-lg rounded-lg ">Govt.</p></div>
+                <div class="grid grid-cols-2 gap-2  card-actions justify-between items-center mt-[18px]">
+                    <button class="btn btn-sm border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
+                    <button class="btn btn-sm btn-ghost border-2 border-[#00A63E] bg-[#00A63E]  rounded-lg text-center text-sm roboto-font text-white"><span><i class="fa-solid fa-phone"></i></span> Call</button>
+                </div>
+            </div>
+            <!-- card -->
+            <div class="card min-w-[200px] bg-white p-5 rounded-2xl box-shadow ">
+                <div class="flex justify-between items-center mb-2">
+                    <div class="p-2 rounded-lg bg-[#FFE3E2]"><img src="./assets/emergency.png" alt="Emergency" class="w-[24px]"></div>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+                <h3 class="font-bold text-[#111111] text-lg hind-madurai-font">Electricity Helpline</h3>
+                <p class="roboto-font text-lg mb-2">Electricity Outage</p>
+                <h2 class="roboto-font text-[#111111] font-bold text-3xl mb-2">16216</h2>
+                <div><p class="inline px-3 py-1  text-[#5C5C5C] bg-[#F2F2F2] hind-madurai-font text-lg rounded-lg ">Electricity</p></div>
+                <div class="grid grid-cols-2 gap-2  card-actions justify-between items-center mt-[18px]">
+                    <button class="btn btn-sm border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
+                    <button class="btn btn-sm btn-ghost border-2 border-[#00A63E] bg-[#00A63E]  rounded-lg text-center text-sm roboto-font text-white"><span><i class="fa-solid fa-phone"></i></span> Call</button>
+                </div>
+            </div>
+            <!-- card -->
+            <div class="card min-w-[200px] bg-white p-5 rounded-2xl box-shadow ">
+                <div class="flex justify-between items-center mb-2">
+                    <div class="p-2 rounded-lg bg-[#FFE3E2]"><img src="./assets/emergency.png" alt="Emergency" class="w-[24px]"></div>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+                <h3 class="font-bold text-[#111111] text-lg hind-madurai-font">Brac Helpline</h3>
+                <p class="roboto-font text-lg mb-2">Brac</p>
+                <h2 class="roboto-font text-[#111111] font-bold text-3xl mb-2">16445</h2>
+                <div><p class="inline px-3 py-1  text-[#5C5C5C] bg-[#F2F2F2] hind-madurai-font text-lg rounded-lg ">NGO</p></div>
+                <div class="grid grid-cols-2 gap-2  card-actions justify-between items-center mt-[18px]">
+                    <button class="btn btn-sm border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
+                    <button class="btn btn-sm btn-ghost border-2 border-[#00A63E] bg-[#00A63E]  rounded-lg text-center text-sm roboto-font text-white"><span><i class="fa-solid fa-phone"></i></span> Call</button>
+                </div>
+            </div>
+            <!-- card -->
+            <div class="card min-w-[200px] bg-white p-5 rounded-2xl box-shadow ">
+                <div class="flex justify-between items-center mb-2">
+                    <div class="p-2 rounded-lg bg-[#FFE3E2]"><img src="./assets/emergency.png" alt="Emergency" class="w-[24px]"></div>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+                <h3 class="font-bold text-[#111111] text-lg hind-madurai-font">Bangladesh Railway Helpline </h3>
+                <p class="roboto-font text-lg mb-2">Bangladesh Railway</p>
+                <h2 class="roboto-font text-[#111111] font-bold text-3xl mb-2">163</h2>
+                <div><p class="inline px-3 py-1  text-[#5C5C5C] bg-[#F2F2F2] hind-madurai-font text-lg rounded-lg ">Travel</p></div>
+                <div class="grid grid-cols-2 gap-2  card-actions justify-between items-center mt-[18px]">
+                    <button class="btn btn-sm border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
+                    <button class="btn btn-sm btn-ghost border-2 border-[#00A63E] bg-[#00A63E]  rounded-lg text-center text-sm roboto-font text-white"><span><i class="fa-solid fa-phone"></i></span> Call</button>
                 </div>
             </div>
         </div>
-<!-- 
-<div class="card bg-neutral text-neutral-content w-96">
-  <div class="card-body items-center text-center">
-    <h2 class="card-title">Cookies!</h2>
-    <p>We are using cookies for no reason.</p>
-    <div class="card-actions justify-end">
-      <button class="btn btn-primary">Accept</button>
-      <button class="btn btn-ghost">Deny</button>
-    </div>
-  </div>
-</div> -->
 
 
 
+        <!-- Call History-section Parent wrapper -->
+        <div class=" call-history-section md:w-3/12 w-full grid grid-cols-1 md:grid-rows bg-white rounded-xl p-5 box-shadow">
+              <!-- Call History  Header -->
+            <div class="">
+                <div class="flex justify-between items-center">
+                    <h3 class="text-[#111111] roboto-font text-xl"><span><i class="fa-regular fa-clock"></i></span> Call History</h3>
+                    <button class="btn bg-[#00A63E]  rounded-full text-center text-sm roboto-font text-white ">Clear</button>
+                </div>
+            </div>
 
+            <!-- Call History List -->
+            <div class="call-history-list space-y-2">
+            <!-- call-history -->
+            <div class="call-history">
+                <div class="flex justify-between items-center bg-[#FAFAFA] rounded-lg p-4 ">
+                    <div>
+                        <h6 class="inter-font font-semibold text-sm text-[#111111]">Fire Service Number</h6>
+                        <p class="hind-madurai-font text-lg text-[#5C5C5C]">999</p>
+                    </div>
+                    <div>
+                        <p class=" hind-madurai-font text-sm text-[#111111]">11:36:58 AM</p>
+                    </div>
+                </div>
+            </div>
+            <!-- call-history -->
+            <div class="call-history">
+                <div class="flex justify-between items-center bg-[#FAFAFA] rounded-lg p-4 ">
+                    <div>
+                        <h6 class="inter-font font-semibold text-sm text-[#111111]">Fire Service Number</h6>
+                        <p class="hind-madurai-font text-lg text-[#5C5C5C]">999</p>
+                    </div>
+                    <div>
+                        <p class=" hind-madurai-font text-sm text-[#111111]">11:36:58 AM</p>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <!-- <div class="call-history-section grid grid-cols-3 border-2 border-green-700">
-
-        </div> -->
     </section>
 
 
