--- a/index.html
+++ b/index.html
@@ -193,10 +193,11 @@
 
 
         <!-- Call History-section Parent wrapper -->
-        <div class=" call-history-section md:w-3/12 w-full grid grid-cols-1 md:grid-rows bg-white rounded-xl p-5 box-shadow">
+         <!-- call-history-section md:w-3/12 w-full grid grid-cols-1 md:grid-rows bg-white rounded-xl p-5 box-shadow -->
+        <div class=" call-history-section md:w-3/12 w-full bg-white rounded-xl p-5 box-shadow">
               <!-- Call History  Header -->
-            <div class="">
-                <div class="flex justify-between items-center">
+            <div>
+                <div class="flex justify-between items-center mb-2">
                     <h3 class="text-[#111111] roboto-font text-xl"><span><i class="fa-regular fa-clock"></i></span> Call History</h3>
                     <button class="btn bg-[#00A63E]  rounded-full text-center text-sm roboto-font text-white ">Clear</button>
                 </div>
