--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <div>
                 <div class="flex justify-between items-center mb-2">
                     <h3 class="text-[#111111] roboto-font text-xl"><span><i class="fa-regular fa-clock"></i></span> Call History</h3>
-                    <button class="btn bg-[#00A63E]  rounded-full text-center text-sm roboto-font text-white ">Clear</button>
+                    <button id="clear-history-btn" class="btn bg-[#00A63E]  rounded-full text-center text-sm roboto-font text-white ">Clear</button>
                 </div>
             </div>
 
