--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <h2 id="card-number" class="roboto-font text-[#111111] font-bold text-3xl mb-2">999</h2>
                 <div><p class="inline px-3 py-1  text-[#5C5C5C] bg-[#F2F2F2] hind-madurai-font text-lg rounded-lg ">All</p></div>
                 <div class="grid grid-cols-2 gap-2  card-actions justify-between items-center mt-[18px]">
-                    <button class="btn btn-sm border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
+                    <button id="copy-btn" class="btn btn-sm border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
                     <button id="call-btn" class="btn btn-sm btn-ghost border-2 border-[#00A63E] bg-[#00A63E]  rounded-lg text-center text-sm roboto-font text-white"><span><i class="fa-solid fa-phone"></i></span> Call</button>
                 </div>
             </div>
@@ -79,7 +79,7 @@
                 <h2 id="card-number" class="roboto-font text-[#111111] font-bold text-3xl mb-2">999</h2>
                 <div><p class="inline px-3 py-1  text-[#5C5C5C] bg-[#F2F2F2] hind-madurai-font text-lg rounded-lg ">Police</p></div>
                 <div class="grid grid-cols-2 gap-2  card-actions justify-between items-center mt-[18px]">
-                    <button class="btn btn-sm border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
+                    <button id="copy-btn" class="btn btn-sm border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
                     <button id="call-btn" class="btn btn-sm btn-ghost border-2 border-[#00A63E] bg-[#00A63E]  rounded-lg text-center text-sm roboto-font text-white"><span><i class="fa-solid fa-phone"></i></span> Call</button>
                 </div>
             </div>
@@ -94,7 +94,7 @@
                 <h2 id="card-number" class="roboto-font text-[#111111] font-bold text-3xl mb-2">999</h2>
                 <div><p class="inline px-3 py-1  text-[#5C5C5C] bg-[#F2F2F2] hind-madurai-font text-lg rounded-lg ">Fire</p></div>
                 <div class="grid grid-cols-2 gap-2  card-actions justify-between items-center mt-[18px]">
-                    <button class="btn btn-sm border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
+                    <button id="copy-btn" class="btn btn-sm border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
                     <button id="call-btn" class="btn btn-sm btn-ghost border-2 border-[#00A63E] bg-[#00A63E]  rounded-lg text-center text-sm roboto-font text-white"><span><i class="fa-solid fa-phone"></i></span> Call</button>
                 </div>
             </div>
@@ -109,7 +109,7 @@
                 <h2 id="card-number" class="roboto-font text-[#111111] font-bold text-3xl mb-2">1994-999999</h2>
                 <div><p class="inline px-3 py-1  text-[#5C5C5C] bg-[#F2F2F2] hind-madurai-font text-lg rounded-lg ">Health</p></div>
                 <div class="grid grid-cols-2 gap-2  card-actions justify-between items-center mt-[18px]">
-                    <button class="btn btn-sm border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
+                    <button id="copy-btn" class="btn btn-sm border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
                     <button id="call-btn" class="btn btn-sm btn-ghost border-2 border-[#00A63E] bg-[#00A63E]  rounded-lg text-center text-sm roboto-font text-white"><span><i class="fa-solid fa-phone"></i></span> Call</button>
                 </div>
             </div>
@@ -124,7 +124,7 @@
                 <h2 id="card-number" class="roboto-font text-[#111111] font-bold text-3xl mb-2">109</h2>
                 <div><p class="inline px-3 py-1  text-[#5C5C5C] bg-[#F2F2F2] hind-madurai-font text-lg rounded-lg ">Help</p></div>
                 <div class="grid grid-cols-2 gap-2  card-actions justify-between items-center mt-[18px]">
-                    <button class="btn btn-sm border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
+                    <button id="copy-btn" class="btn btn-sm border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
                     <button id="call-btn" class="btn btn-sm btn-ghost border-2 border-[#00A63E] bg-[#00A63E]  rounded-lg text-center text-sm roboto-font text-white"><span><i class="fa-solid fa-phone"></i></span> Call</button>
                 </div>
             </div>
@@ -139,7 +139,7 @@
                 <h2 id="card-number" class="roboto-font text-[#111111] font-bold text-3xl mb-2">106</h2>
                 <div><p class="inline px-3 py-1  text-[#5C5C5C] bg-[#F2F2F2] hind-madurai-font text-lg rounded-lg ">Govt.</p></div>
                 <div class="grid grid-cols-2 gap-2  card-actions justify-between items-center mt-[18px]">
-                    <button class="btn btn-sm border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
+                    <button id="copy-btn" class="btn btn-sm border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
                     <button id="call-btn" class="btn btn-sm btn-ghost border-2 border-[#00A63E] bg-[#00A63E]  rounded-lg text-center text-sm roboto-font text-white"><span><i class="fa-solid fa-phone"></i></span> Call</button>
                 </div>
             </div>
@@ -154,7 +154,7 @@
                 <h2 id="card-number" class="roboto-font text-[#111111] font-bold text-3xl mb-2">16216</h2>
                 <div><p class="inline px-3 py-1  text-[#5C5C5C] bg-[#F2F2F2] hind-madurai-font text-lg rounded-lg ">Electricity</p></div>
                 <div class="grid grid-cols-2 gap-2  card-actions justify-between items-center mt-[18px]">
-                    <button class="btn btn-sm border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
+                    <button id="copy-btn" class="btn btn-sm border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
                     <button id="call-btn" class="btn btn-sm btn-ghost border-2 border-[#00A63E] bg-[#00A63E]  rounded-lg text-center text-sm roboto-font text-white"><span><i class="fa-solid fa-phone"></i></span> Call</button>
                 </div>
             </div>
@@ -169,7 +169,7 @@
                 <h2 id="card-number" class="roboto-font text-[#111111] font-bold text-3xl mb-2">16445</h2>
                 <div><p class="inline px-3 py-1  text-[#5C5C5C] bg-[#F2F2F2] hind-madurai-font text-lg rounded-lg ">NGO</p></div>
                 <div class="grid grid-cols-2 gap-2  card-actions justify-between items-center mt-[18px]">
-                    <button class="btn btn-sm border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
+                    <button id="copy-btn" class="btn btn-sm border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
                     <button id="call-btn" class="btn btn-sm btn-ghost border-2 border-[#00A63E] bg-[#00A63E]  rounded-lg text-center text-sm roboto-font text-white"><span><i class="fa-solid fa-phone"></i></span> Call</button>
                 </div>
             </div>
@@ -184,7 +184,7 @@
                 <h2 id="card-number" class="roboto-font text-[#111111] font-bold text-3xl mb-2">163</h2>
                 <div><p class="inline px-3 py-1  text-[#5C5C5C] bg-[#F2F2F2] hind-madurai-font text-lg rounded-lg ">Travel</p></div>
                 <div class="grid grid-cols-2 gap-2  card-actions justify-between items-center mt-[18px]">
-                    <button class="btn btn-sm border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
+                    <button id="copy-btn" class="btn btn-sm border-2 border-[#D4D6D5] rounded-lg text-center  text-[#5C5C5C] text-sm roboto-font"><span><i class="fa-regular fa-copy"></i></span> Copy</button>
                     <button id="call-btn" class="btn btn-sm btn-ghost border-2 border-[#00A63E] bg-[#00A63E]  rounded-lg text-center text-sm roboto-font text-white"><span><i class="fa-solid fa-phone"></i></span> Call</button>
                 </div>
             </div>
