added copy count in the navbar

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <img src="./assets/coin.png" alt="coin count" class="w-[24px]">
             </div>
             <div class="copy-count flex items-center gap-2 bg-[#00A63E] py-2 px-4 rounded-full text-white">
-                <span>0</span>
+                <span id="copy-count">0</span>
                 <p>Copy</p>
             </div>
         </div>
