Emergency Hotline Project Done

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
 <nav class="bg-white"> 
     <div class=" flex flex-col md:flex-row gap-3 justify-between items-center py-[24px] max-w-[1280px] mx-auto px-4 ">
         <div class="nav-left-side flex items-center gap-2 ">
-            <img src="./assets/logo.png" alt="Site Logo" class="w-[50px]">
-            <h3 class="text-[#006747] font-black leading-[1] text-2xl">Emergency <br> Service</h3>
+            <img src="./assets/logo.png" alt="Site Logo" class="w-[40px]">
+            <h3 class="text-[#006747] font-black leading-[1] text-xl">Emergency <br> Service</h3>
         </div>
         <div class="nav-right-side flex items-center justify-end gap-4 hind-madurai-font font-bold ">
-            <div class="heart-icon flex items-center gap-2 bg-[#41ff6b1a] py-2 px-4 rounded-full">
+            <div class="heart-icon flex items-center gap-2 bg-[#41ff6b1a] py-1 px-4 rounded-full">
                 <span id="heart-icon-count">0</span>
                 <img src="./assets/heart.png" alt="heart icon" class="w-[24px] ">
             </div>
-            <div class="coin-count flex items-center gap-2 bg-[#41ff6b1a] py-2 px-4 rounded-full ">
+            <div class="coin-count flex items-center gap-2 bg-[#41ff6b1a] py-1 px-4 rounded-full ">
                 <span id="coin-icon-count">100</span>
                 <img src="./assets/coin.png" alt="coin count" class="w-[24px]">
             </div>
-            <div class="copy-count flex items-center gap-2 bg-[#00A63E] py-2 px-4 rounded-full text-white">
+            <div class="copy-count flex items-center gap-2 bg-[#00A63E] py-1 px-4 rounded-full text-white">
                 <span id="copy-count">0</span>
                 <p>Copy</p>
             </div>
@@ -41,20 +41,21 @@
 </nav>
 
 <!-- Hero Section Start -->
- <main>
-    <section class="">
+     <section>
         <div class="mx-auto text-center text-white gradient-color py-5  px-4">
             <img src="./assets/logo.png" alt="Logo" class="w-[92px] mx-auto">
-            <h1 class="font-bold text-2xl ">Emergency Service Directory</h1>
-            <p class="font-semibold leading-[2.5]">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+            <h1 class="font-bold text-lg md:text-2xl my-4 ">Emergency Service Directory</h1>
+            <p class="font-semibold">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
         </div>
     </section>
 
-    <section class=" max-w-[1280px] mx-auto px-4 py-10 flex gap-10 flex-col md:flex-row justify-between rounded-xl ">
+    <!-- Main Section start here -->
+ <main>
+    <section class=" max-w-[1280px] mx-auto px-4 py-10 flex  sm:gap-5 md:gap-8 lg:gap-10 flex-col md:flex-row justify-between rounded-xl ">
         <!-- cards-section start Here -->
-        <div class="cards-section  md:w-9/12 w-full grid grid-cols-1 md:grid-cols-3 lg sm:grid-cols-2 gap-5 ">
+        <div class="cards-section  md:w-9/12 w-full grid grid-cols-1 md:grid-cols-3 lg sm:grid-cols-2  sm:gap-5 md:gap-3 lg:gap-5">
             <!-- card -->
-            <div class="card min-w-[200px] bg-white p-5 rounded-2xl box-shadow ">
+            <div class="card w-full bg-white p-5 rounded-2xl box-shadow ">
                 <div class="flex justify-between items-center mb-2">
                     <div class="p-2 rounded-lg bg-[#FFE3E2]"><img src="./assets/emergency.png" alt="Emergency" class="w-[24px]"></div>
                     <i id="card-heart-icon" class=" fa-regular fa-heart"></i>
@@ -69,7 +70,7 @@
                 </div>
             </div>
             <!-- card -->
-            <div class="card min-w-[200px] bg-white p-5 rounded-2xl box-shadow ">
+            <div class="card w-full bg-white p-5 rounded-2xl box-shadow ">
                 <div class="flex justify-between items-center mb-2">
                     <div class="p-2 rounded-lg bg-[#DFEFFF]"><img src="./assets/police.png" alt="police" class="w-[24px]"></div>
                     <i id="card-heart-icon" class="fa-regular fa-heart"></i>
@@ -84,7 +85,7 @@
                 </div>
             </div>
             <!-- card -->
-            <div class="card min-w-[200px] bg-white p-5 rounded-2xl box-shadow ">
+            <div class="card w-full bg-white p-5 rounded-2xl box-shadow ">
                 <div class="flex justify-between items-center mb-2">
                     <div class="p-2 rounded-lg bg-[#FFE3E2]"><img src="./assets/fire-service.png" alt="fire-service" class="w-[24px]"></div>
                     <i id="card-heart-icon" class="fa-regular fa-heart"></i>
@@ -99,7 +100,7 @@
                 </div>
             </div>
             <!-- card -->
-            <div class="card min-w-[200px] bg-white p-5 rounded-2xl box-shadow ">
+            <div class="card w-full bg-white p-5 rounded-2xl box-shadow ">
                 <div class="flex justify-between items-center mb-2">
                     <div class="p-2 rounded-lg bg-[#FFE3E2]"><img src="./assets/ambulance.png" alt="Ambulance" class="w-[24px]"></div>
                     <i id="card-heart-icon" class="fa-regular fa-heart"></i>
@@ -114,7 +115,7 @@
                 </div>
             </div>
             <!-- card -->
-            <div class="card min-w-[200px] bg-white p-5 rounded-2xl box-shadow ">
+            <div class="card w-full bg-white p-5 rounded-2xl box-shadow ">
                 <div class="flex justify-between items-center mb-2">
                     <div class="p-2 rounded-lg bg-[#FFE3E2]"><img src="./assets/emergency.png" alt="Emergency" class="w-[24px]"></div>
                     <i id="card-heart-icon" class="fa-regular fa-heart"></i>
@@ -129,7 +130,7 @@
                 </div>
             </div>
             <!-- card -->
-            <div class="card min-w-[200px] bg-white p-5 rounded-2xl box-shadow ">
+            <div class="card w-full bg-white p-5 rounded-2xl box-shadow ">
                 <div class="flex justify-between items-center mb-2">
                     <div class="p-2 rounded-lg bg-[#FFE3E2]"><img src="./assets/emergency.png" alt="Emergency" class="w-[24px]"></div>
                     <i id="card-heart-icon" class="fa-regular fa-heart"></i>
@@ -144,7 +145,7 @@
                 </div>
             </div>
             <!-- card -->
-            <div class="card min-w-[200px] bg-white p-5 rounded-2xl box-shadow ">
+            <div class="card w-full bg-white p-5 rounded-2xl box-shadow ">
                 <div class="flex justify-between items-center mb-2">
                     <div class="p-2 rounded-lg bg-[#FFE3E2]"><img src="./assets/emergency.png" alt="Emergency" class="w-[24px]"></div>
                     <i  id="card-heart-icon" class="fa-regular fa-heart"></i>
@@ -159,9 +160,9 @@
                 </div>
             </div>
             <!-- card -->
-            <div class="card min-w-[200px] bg-white p-5 rounded-2xl box-shadow ">
+            <div class="card w-full bg-white p-5 rounded-2xl box-shadow ">
                 <div class="flex justify-between items-center mb-2">
-                    <div class="p-2 rounded-lg bg-[#FFE3E2]"><img src="./assets/emergency.png" alt="Emergency" class="w-[24px]"></div>
+                    <div class="p-2 rounded-lg bg-[#FFE3E2]"><img src="./assets/brac.png" alt="brac" class="w-[24px]"></div>
                     <i id="card-heart-icon" class="fa-regular fa-heart"></i>
                 </div>
                 <h3 id="service-name" class=" font-bold text-[#111111] text-lg hind-madurai-font">Brac Helpline</h3>
@@ -174,7 +175,7 @@
                 </div>
             </div>
             <!-- card -->
-            <div class="card min-w-[200px] bg-white p-5 rounded-2xl box-shadow ">
+            <div class="card w-full bg-white p-5 rounded-2xl box-shadow ">
                 <div class="flex justify-between items-center mb-2">
                     <div class="p-2 rounded-lg bg-[#FFE3E2]"><img src="./assets/emergency.png" alt="Emergency" class="w-[24px]"></div>
                     <i id="card-heart-icon" class="fa-regular fa-heart"></i>
@@ -190,10 +191,7 @@
             </div>
         </div>
 
-
-
         <!-- Call History-section Parent wrapper -->
-         <!-- call-history-section md:w-3/12 w-full grid grid-cols-1 md:grid-rows bg-white rounded-xl p-5 box-shadow -->
         <div class=" call-history-section md:w-3/12 w-full bg-white rounded-xl p-5 box-shadow">
               <!-- Call History  Header -->
             <div>
@@ -211,23 +209,7 @@
         </div>
 
     </section>
-
-
  </main>
-
-<!--  -->
-
-
-
-
-
-
-
-
-
-
-
-
 
 <!-- Custom Javascript -->
     <script src="./js/script.js"></script>
